--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,14 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
-
+@import url('./static/css/main.css');
 :root {
   --primary-color: #3498db;
   --menu-color: #9CAB9E;
   --menu-text-color: #ffffff;
-  --background-color: #f9f9f9;
+  --background-color: #a4b3a6;
   --text-color: #333;
+  background-color: #a4b3a6;
 }
 
 body {
@@ -21,9 +22,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #a4b3a6;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
