added more illustrations, started code portfolio page

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #a4b3a6;
+  background-color: #edeee5;
 }
 
 code {
